@@ -2,6 +2,8 @@
 
 * Add #tag_counts method to get tag counts for a specific object's tags.
 
+* BACKWARDS INCOMPATIBILITY: Rename #find_options_for_tagged_with to #find_options_for_find_tagged_with
+
 [17 September 2007]
 
 * Fix clearing of cached tag list when all tags removed.
